[tool.poetry]
name = "morpho"
version = "0.1.4"
description = "morpho"
authors = ["mraniki <8766259+mraniki@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.urls]
"Changelog" =  "https://github.com/mraniki/morpho/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/morpho/discussions"
"Issues" =  "https://github.com/mraniki/morpho/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.poetry.dev-dependencies]
python-semantic-release = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["pyproject.toml:version","src/bot.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = false
remove_dist = false
commit_parser = "semantic_release.history.emoji_parser"
use_textual_changelog_sections = true
major_emoji = "ðŸ’¥,:boom:"
minor_emoji = "âœ¨,ðŸ¥š,ðŸš¸,ðŸ“±,ðŸ’„,ðŸ“ˆ,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:"
patch_emoji = "ðŸŽ¨,ðŸ›,ðŸš‘,âš¡,ðŸ”¥,ðŸš¨,â™»ï¸,ðŸ”§,â¬†ï¸,ðŸ©¹,ðŸ‘·,ðŸ“,ðŸ”’,ðŸ‘½,ðŸ”,ðŸ’¬,ðŸ¥…,âœ…,â™¿,ðŸ³,ðŸ,ðŸ§,ðŸ,ðŸ¤–,:white_check_mark:,:arrow_up:,:recycle:,:fire,:whale:,:art:,:ambulance:,:lock:,:arrow_up:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,:rotating_light:,:construction_worker:"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
